--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/20.DELETE.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/20.DELETE.md
@@ -2,7 +2,7 @@
 
 `DELETE` 算子用于删除数据表中满足指定条件的数据行。
 
-OceanBase 数据库支持的 `DELETE` 算子包括 `DELETE` 和 `MULTI PARTITION DELETE`。
+OceanBase 数据库支持的 `DELETE` 算子包括 `DELETE` 和 `DISTRIBUTED DELETE`。
 
 ## DELETE
 
@@ -136,9 +136,9 @@ Outputs & filters:
       access([T2.C1], [T2.C2]), partitions(p[0-9])
 ```
 
-## MULTI PARTITION DELETE
+## DISTRIBUTED DELETE
 
-`MULTI PARTITION DELETE` 算子用于删除数据表多个分区中的数据。
+`DISTRIBUTED DELETE` 算子用于删除数据表多个分区中的数据。
 
 如下例所示，Q5 查询删除了表 `t3` 中所有满足 `c2 > '100'` 的数据行。虽然 `t3` 本身是一个非分区表，但因为 `t3` 上存在全局索引 `idx_t3_c2`，因此每一条数据行会存在于多个分区中。
 
@@ -147,25 +147,19 @@ Q5:
 obclient> EXPLAIN DELETE FROM t3 WHERE c2 > '100'\G
 *************************** 1. row ***************************
 Query Plan:
-========================================================
-
-|ID|OPERATOR                |NAME         |EST. ROWS|COST |
------------------------------------------------------------
-|0 |MULTI PARTITION DELETE  |             |10001    |27780|
-|1 | PX COORDINATOR         |             |10001    |17780|
-|2 |  EXCHANGE OUT DISTR    |:EX10000     |10001    |14941|
-|3 |   PX PARTITION ITERATOR|             |10001    |14941|
-|4 |    TABLE SCAN          |T3(IDX_T3_C2)|10001    |14941|
-===========================================================
+=================================================
+|ID|OPERATOR              |NAME|EST. ROWS|COST |
+-------------------------------------------------
+|0 |DISTRIBUTED INSERT    |    |2        |1    |
+|1 | EXPRESSION           |    |2        |1    |
+==================================================
 
 Outputs & filters:
 -------------------------------------
-  0 - output(nil), filter(nil), table_columns([{T3: ({T3: (T3.C1, T3.C2)}, {IDX_T3_C2: (T3.C2, T3.C1)})}])
-  1 - output([T3.C1], [T3.C2]), filter(nil)
-  2 - output([T3.C2], [T3.C1]), filter(nil), dop=1
-  3 - output([T3.C2], [T3.C1]), filter(nil)
-  4 - output([T3.C2], [T3.C1]), filter(nil),
-      access([T3.C2], [T3.C1]), partitions(p[0-2])
+  0 - output([column_conv(NUMBER,PS:(38,0),NOT NULL,__values.C1)], [column_conv(VARCHAR2,utf8mb4_bin,length:10,NULL,__values.C2)]), filter(nil),
+      columns([{T2: ({T2: (T2.C1, T2.C2)})}]), partitions(p0, p6)
+  1 - output([__values.C1], [__values.C2]), filter(nil)
+      values({2, '200'}, {3, '300'})
 ```
 
-上述示例的执行计划展示中的 `outputs & filters` 详细列出了 `MULTI PARTITION DELETE` 算子的信息，字段的含义与 `DELETE` 算子相同。
+上述示例的执行计划展示中的 `outputs & filters` 详细列出了 `DISTRIBUTED DELETE` 算子的信息，字段的含义与 `DELETE` 算子相同。
