--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/21.UPDATE.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/21.UPDATE.md
@@ -2,7 +2,7 @@
 
 `UPDATE` 算子用于更新数据表中满足指定条件的数据行。
 
-OceanBase 数据库支持的 `UPDATE` 算子包括 `UPDATE` 和 `MULTI PARTITION UPDATE`。
+OceanBase 数据库支持的 `UPDATE` 算子包括 `UPDATE` 和 `DISTRIBUTED UPDATE`。
 
 ## UPDATE
 
@@ -42,7 +42,7 @@ obclient> CREATE INDEX IDX_t3_c2 ON t3 (c2) PARTITION BY HASH(c2) PARTITIONS 3;
 Query OK, 0 rows affected 
 
 Q1: 
-obclient> EXPLAIN UPDATE t1 SET c2 = '200' WHERE c2 = '100'\G
+obclient> EXPLAIN UPDATE t1 SET c2 = '200' WHERE c2 = '100';
 *************************** 1. row ***************************
 Query Plan:
 ======================================
@@ -149,60 +149,60 @@ Outputs & filters:
       access([T2.C1], [T2.C2]), partitions(p[0-9])
 ```
 
-## MULTI PARTITION UPDATE
+## DISTRIBUTED UPDATE
 
-`MULTI PARTITION UPDATE` 算子表示更新数据表多个分区中的数据。如下例所示，Q5 查询更新表 `t3` 中所有满足 `c2 < '100'` 的数据行，并将 `c2` 列的值置为 200。虽然 `t3` 本身是一个非分区表，但 `t3` 表上存在全局索引 `idx_t3_c2`，因此每一条数据行会存在于多个分区中。
+`DISTRIBUTED UPDATE` 算子表示更新数据表多个分区中的数据。如下例所示，Q5 查询更新表 `t3` 中所有满足 `c2 < '100'` 的数据行，并将 `c2` 列的值置为 200。虽然 `t3` 本身是一个非分区表，但 `t3` 表上存在全局索引 `idx_t3_c2`，因此每一条数据行会存在于多个分区中。
 
 ```sql
 Q5: 
-obclient> EXPLAIN UPDATE t3 SET c2 = '200' WHERE c2 < '100'\G
-*************************** 1. row ***************************
-Query Plan:
-========================================================
-|ID|OPERATOR                |NAME         |EST. ROWS|COST |
------------------------------------------------------------
-|0 |MULTI PARTITION UPDATE  |             |10001    |27780|
-|1 | PX COORDINATOR         |             |10001    |17780|
-|2 |  EXCHANGE OUT DISTR    |:EX10000     |10001    |14941|
-|3 |   PX PARTITION ITERATOR|             |10001    |14941|
-|4 |    TABLE SCAN          |T3(IDX_T3_C2)|10001    |14941|
-===========================================================
-
-Outputs & filters:
--------------------------------------
-  0 - output(nil), filter(nil), table_columns([{T3: ({T3: (T3.C1, T3.C2)}, {IDX_T3_C2: (T3.C2, T3.C1)})}]),
-      update([T3.C2=?])
-  1 - output([T3.C1], [T3.C2], [?]), filter(nil)
-  2 - output([T3.C2], [T3.C1], [?]), filter(nil), dop=1
-  3 - output([T3.C2], [T3.C1], [?]), filter(nil)
-  4 - output([T3.C2], [T3.C1], [?]), filter(nil),
-      access([T3.C2], [T3.C1]), partitions(p[0-2])
+obclient> EXPLAIN UPDATE t3 SET c2 = '200' WHERE c2 < '100';
++--------------------------------------------------------------------------------------------------------+
+| Query Plan                                                                                             |
++--------------------------------------------------------------------------------------------------------+
+| =======================================================================                                |
+| |ID|OPERATOR                      |NAME         |EST.ROWS|EST.TIME(us)|                                |
+| -----------------------------------------------------------------------                                |
+| |0 |DISTRIBUTED UPDATE            |             |1       |61          |                                |
+| |1 |└─DISTRIBUTED TABLE RANGE SCAN|T3(IDX_T3_C2)|1       |6           |                                |
+| =======================================================================                                |
+| Outputs & filters:                                                                                     |
+| -------------------------------------                                                                  |
+|   0 - output(nil), filter(nil)                                                                         |
+|       table_columns([{T3: ({T3: (T3.C1, T3.C2)}, {IDX_T3_C2: (T3.C2, T3.C1)})}]),                      |
+|       update([T3.C2=column_conv(VARCHAR2,utf8mb4_bin,length:10,NULL,cast('200', VARCHAR2(1048576 )))]) |
+|   1 - output([T3.C1], [T3.C2]), filter(nil), rowset=256                                                |
+|       access([T3.C1], [T3.C2]), partitions(p[0-2])                                                     |
+|       is_index_back=false, is_global_index=true,                                                       |
+|       range_key([T3.C2], [T3.C1]), range(MIN,MIN ; 100,MIN),                                           |
+|       range_cond([T3.C2 < cast('100', VARCHAR2(1048576 ))])                                            |
++--------------------------------------------------------------------------------------------------------+
 ```
 
-更多 `MULTI PARTITION UPDATE` 的示例如下：
+更多 `DISTRIBUTED UPDATE` 的示例如下：
 
-* Q6 查询更新分区表 `t2` 中满足 `c1 = 100` 的数据行，并将 `c1` 列的值设置为 101。因为更新的列是主键列，可能会导致更新后的数据行与更新前的数据行位于不同的分区，因此需要使用 `MULTI PARTITION UPDATE` 算子进行更新。
+* Q6 查询更新分区表 `t2` 中满足 `c1 = 100` 的数据行，并将 `c1` 列的值设置为 101。因为更新的列是主键列，可能会导致更新后的数据行与更新前的数据行位于不同的分区，因此需要使用 `DISTRIBUTED UPDATE` 算子进行更新。
 
 ```sql
 Q6: 
-obclient> EXPLAIN UPDATE t2 SET t2.c1 = 101 WHERE t2.c1 = 100\G
-*************************** 1. row ***************************
-Query Plan:
-===============================================
-|ID|OPERATOR              |NAME|EST. ROWS|COST|
------------------------------------------------
-|0 |MULTI PARTITION UPDATE|    |1        |54  |
-|1 | EXCHANGE IN DISTR    |    |1        |53  |
-|2 |  EXCHANGE OUT DISTR  |    |1        |52  |
-|3 |   TABLE GET          |T2  |1        |52  |
-===============================================
-
-Outputs & filters:
--------------------------------------
-  0 - output(nil), filter(nil), table_columns([{T2: ({T2: (T2.C1, T2.C2)})}]),
-      update([T2.C1=?])
-  1 - output([T2.C1], [T2.C2], [?]), filter(nil)
-  2 - output([T2.C1], [T2.C2], [?]), filter(nil)
-  3 - output([T2.C1], [T2.C2], [?]), filter(nil),
-      access([T2.C1], [T2.C2]), partitions(p5)
+obclient> EXPLAIN UPDATE t2 SET t2.c1 = 101 WHERE t2.c1 = 100;
++------------------------------------------------------------------+
+| Query Plan                                                       |
++------------------------------------------------------------------+
+| ==================================================               |
+| |ID|OPERATOR          |NAME|EST.ROWS|EST.TIME(us)|               |
+| --------------------------------------------------               |
+| |0 |DISTRIBUTED UPDATE|    |1       |34          |               |
+| |1 |└─TABLE GET       |T2  |1       |3           |               |
+| ==================================================               |
+| Outputs & filters:                                               |
+| -------------------------------------                            |
+|   0 - output(nil), filter(nil)                                   |
+|       table_columns([{T2: ({T2: (T2.C1, T2.C2)})}]),             |
+|       update([T2.C1=column_conv(NUMBER,PS:(-1,0),NOT NULL,101)]) |
+|   1 - output([T2.C1], [T2.C2]), filter(nil), rowset=256          |
+|       access([T2.C1], [T2.C2]), partitions(p5)                   |
+|       is_index_back=false, is_global_index=false,                |
+|       range_key([T2.C1]), range[100 ; 100],                      |
+|       range_cond([T2.C1 = 100])                                  |
++------------------------------------------------------------------+
 ```
