v410-Chinese-character-fix

--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/4.use-string-functions-in-queries-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/4.use-string-functions-in-queries-of-mysql-mode.md
@@ -48,7 +48,9 @@ obclient> SELECT CHAR_LENGTH(c_last) namelength
 3 rows in set
 ```
 
-In MySQL mode of OceanBase Database, the `LENGTH()` function uses byte as the length unit of strings, and the `CHAR_LENGTH()` function uses character as the length unit of strings. Example:
+In MySQL mode of OceanBase Database, the `LENGTH()` function uses byte as the length unit of strings, and the `CHAR_LENGTH()` function uses character as the length unit of strings. 
+
+<!-- Example:
 
 ```sql
 obclient> SELECT CHAR_LENGTH('中国'), LENGTH('中国'),CHAR_LENGTH('hello');
@@ -58,4 +60,4 @@ obclient> SELECT CHAR_LENGTH('中国'), LENGTH('中国'),CHAR_LENGTH('hello');
 |                     2 |                6 |                    5 |
 +-----------------------+------------------+----------------------+
 1 row in set
-```
+``` -->
