--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
@@ -91,9 +91,9 @@ You can connect to an Oracle tenant of OceanBase Database by using any of the fo
 
    For more information about how to connect to OceanBase Database by using SpringJDBC, see [Connect to OceanBase Database by using Spring JDBC](9.connect-to-the-oceanbase-database-through-spring-jdbc-of-oracle-mode.md). 
 
-* Spring JPA
+<!-- * Spring JPA
 
-   For more information about how to connect to OceanBase Database by using SpringJPA, see [Connect to OceanBase Database by using Spring JPA](10.connect-to-the-oceanbase-database-through-springjpa-of-oracle-mode.md). 
+   For more information about how to connect to OceanBase Database by using SpringJPA, see [Connect to OceanBase Database by using Spring JPA](10.connect-to-the-oceanbase-database-through-springjpa-of-oracle-mode.md).  -->
 
 * Hibernate
 
