--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/3.string-functions-that-return-numbers-of-oracle-mode/1.ascii-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/3.string-functions-that-return-numbers-of-oracle-mode/1.ascii-of-oracle-mode.md
@@ -34,7 +34,7 @@ obclient> SELECT ASCII('A') A, ASCII('a') a, ASCII(' ') space FROM DUAL;
 1 row in set
 ```
 
-Use the `ASCII` function to return the ASCII code values of letters **A** and **a**, Chinese character "**中**", and a space.
+<!-- Use the `ASCII` function to return the ASCII code values of letters **A** and **a**, Chinese character "**中**", and a space.
 
 ```sql
 obclient> SELECT ASCII('A') A, ASCII('a') a, ASCII(' ') space,ASCII('中') hz FROM DUAL;
@@ -44,4 +44,4 @@ obclient> SELECT ASCII('A') A, ASCII('a') a, ASCII(' ') space,ASCII('中') hz FR
 |   65 |   97 |    32 | 14989485 |
 +------+------+-------+----------+
 1 row in set
-```
+``` -->
