--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/7.encoding-and-decoding-functions-of-oracle-mode/4.vsize-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/7.encoding-and-decoding-functions-of-oracle-mode/4.vsize-of-oracle-mode.md
@@ -22,14 +22,14 @@ VSIZE (expr)
 
 ## Examples
 
-Use the `VSIZE` function to query the size in bytes of `123456`, `ABCDEF`, and `中华人民共和国`.
+Use the `VSIZE` function to query the size in bytes of `123456` ad `ABCDEF`.
 
 ```sql
-obclient> SELECT VSIZE(123456),VSIZE('ABCDEF'),VSIZE ('中华人民共和国') FROM DUAL;
-+---------------+-----------------+--------------------------------+
-| VSIZE(123456) | VSIZE('ABCDEF') | VSIZE('中华人民共和国')        |
-+---------------+-----------------+--------------------------------+
-|             8 |               6 |                             21 |
-+---------------+-----------------+--------------------------------+
+obclient> SELECT VSIZE(123456),VSIZE('ABCDEF') FROM DUAL;
++---------------+-----------------+
+| VSIZE(123456) | VSIZE('ABCDEF') |
++---------------+-----------------+
+|             8 |               6 |                  
++---------------+-----------------+
 1 row in set
 ```
