--- a/en-US/7.reference/5.system-reference/7.error-code-of-oracle-mode/9.ora-30000-to-ora-49999-of-oracle-mode.md
+++ b/en-US/7.reference/5.system-reference/7.error-code-of-oracle-mode/9.ora-30000-to-ora-49999-of-oracle-mode.md
@@ -1148,11 +1148,11 @@ ORA-39962: invalid parameter for PLSQL_CCFLAGS
 * Cause: The name input given to the JSON generation function was null.
 * Solution: Ensure that the input has a valid value.
 
-## ORA-40597: JSON path expression syntax error ('%.*s')
+<!-- ## ORA-40597: JSON path expression syntax error ('%.*s')
 
 * Error code in OceanBase Database: 5454
 * SQLSTATE: 42000
-* Cause: The specified JSON path expression had invalid syntax (“%.*s”).
+* Cause: The specified JSON path expression had invalid syntax (“%.*s”). -->
 
 ## ORA-40629: Patch specification is not valid JSON
 
