--- a/en-US/2.quickstart/3.create-sample-application-of-mysql-mode/3.c-application-of-mysql-model.md
+++ b/en-US/2.quickstart/3.create-sample-application-of-mysql-mode/3.c-application-of-mysql-model.md
@@ -186,7 +186,7 @@ int main(int argc, char** argv)
   MYSQL *mysql = mysql_init(NULL);
   char* host_name = "172.xx.xx.xx";// set your MySQL host
   char* user_name = "r***"; // set your username
-  char* password = "***1**"; // set your password
+  char* password = "******"; // set your password
   char* db_name = "test"; // set your database name
   int port_num = 2883; // set your MySQL port number
   char* socket_name = NULL;
