--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md
@@ -94,9 +94,9 @@ You can connect to a MySQL tenant of OceanBase Database by using any of the foll
 
    For more information about how to connect to OceanBase Database by using Spring JDBC, see [Connect to OceanBase Database by using Spring JDBC](10.connect-to-the-oceanbase-database-through-spring-jdbc-of-mysql-mode.md). 
 
-* Spring JPA
+<!-- * Spring JPA
 
-   For more information about how to connect to OceanBase Database by using Spring JPA, see [Connect to OceanBase Database by using Spring JPA](11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md). 
+   For more information about how to connect to OceanBase Database by using Spring JPA, see [Connect to OceanBase Database by using Spring JPA](11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md).  -->
 
 * Hibernate
 
