--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/4.sort-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/4.sort-query-of-oracle-mode.md
@@ -77,7 +77,7 @@ obclient> SELECT empname, deptno,sal, HIREDATE FROM emp WHERE sal>=1000 ORDER BY
 5 rows in set
 ```
 
-## Sorting by using the NLSSORT function
+<!-- ## Sorting by using the NLSSORT function
 
 You can use the `NLSSORT` function to sort by Chinese Pinyin or stroke number. 
 
@@ -120,4 +120,4 @@ obclient> SELECT * FROM tbl1 ORDER BY NLSSORT(col2,'NLS_SORT=UCA0900_SCHINESE_PI
 |    2 | 香蕉      |
 +------+-----------+
 6 rows in set
-```
+``` -->
