--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/4.use-string-function-in-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/4.use-string-function-in-query-of-oracle-mode.md
@@ -4,9 +4,9 @@ The frequently used string functions include LENGTH, SUBSTR, CONCAT, UPPER, LOWE
 
 Note that in an Oracle tenant, the LENGTH function calculates string lengths in characters and the LENGTHB function calculates string lengths in bytes, as defined by the character set. 
 
-## Examples
+## Example
 
-### Example 1
+<!-- ### Example 1
 
 Check the string length of the Chinese character "中". 
 
@@ -18,9 +18,9 @@ obclient> SELECT LENGTH('中'), LENGTHB('中') FROM DUAL;
 |             1 |              3 |
 +---------------+----------------+
 1 row in set
-```
+``` -->
 
-### Example 2
+<!-- ### Example 2 -->
 
 View the length of the NLS_CHARACTERSET character set. 
 
