--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
@@ -213,7 +213,7 @@ Test method:
     public void testInsert(){
         User user = new User();
         user.setId(1);
-        user.setUsername("测试数据");
+        user.setUsername("testdata");
         userDao.save(user);
     }
 ```
@@ -231,9 +231,9 @@ Enable the commented-out attribute of the User class and execute the following m
     public void testAlert(){
         User user = new User();
         user.setId(1);
-        user.setUsername("测试数据");
-        user.setAddress("北京");
-        user.setSex("男");
+        user.setUsername("testdata");
+        user.setAddress("beijing");
+        user.setSex("male");
         user.setBirthday(new Date());
         userDao.save(user);
     }
