--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/4.use-string-functions-in-queries-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/4.use-string-functions-in-queries-of-mysql-mode.md
@@ -50,7 +50,8 @@ obclient> SELECT CHAR_LENGTH(c_last) namelength
 
 In MySQL mode of OceanBase Database, the `LENGTH()` function uses byte as the length unit of strings, and the `CHAR_LENGTH()` function uses character as the length unit of strings. 
 
-<!-- Example:
+<!-- 
+Example:
 
 ```sql
 obclient> SELECT CHAR_LENGTH('中国'), LENGTH('中国'),CHAR_LENGTH('hello');
@@ -60,4 +61,5 @@ obclient> SELECT CHAR_LENGTH('中国'), LENGTH('中国'),CHAR_LENGTH('hello');
 |                     2 |                6 |                    5 |
 +-----------------------+------------------+----------------------+
 1 row in set
-``` -->
+``` 
+-->
