--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
@@ -694,7 +694,7 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 
 | 配置项 | 修改类型 | 默认值 | 描述 |
 | ----- | ----- | ----- | ----- |
-| _enable_reserved_user_dcl_restriction | 新增 | false | 控制是否只有内置用户后对内置用户进行修改。属于集群级配置项，取值范围为 [true，false]。 |
+| _enable_reserved_user_dcl_restriction | 新增 | false | 限制只有内置用户才能对内置用户进行修改。属于集群级配置项，取值范围为 [true，false]。 |
 
 ### 行为变更
 
