--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md
@@ -102,6 +102,6 @@ You can connect to a MySQL tenant of OceanBase Database by using any of the foll
 
    For more information about how to connect to OceanBase Database by using Hibernate, see [Connect to OceanBase Database by using Hibernate](12.connect-to-the-oceanbase-database-through-hibernate-of-mysql-mode.md). 
 
-* MyBatis
+<!-- * MyBatis
 
-   For more information about how to connect to OceanBase Database by using MyBatis, see [Connect to OceanBase Database by using MyBatis](13.connect-to-the-oceanbase-database-through-mybatis-of-mysql-mode.md). 
+   For more information about how to connect to OceanBase Database by using MyBatis, see [Connect to OceanBase Database by using MyBatis](13.connect-to-the-oceanbase-database-through-mybatis-of-mysql-mode.md).  -->
