--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/98.V4.1/97.V4.1.0_ee.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/98.V4.1/97.V4.1.0_ee.md
@@ -674,7 +674,7 @@ OceanBase 数据库 V4.1.0 版本推荐使用的平台工具版本如下。
 ### 缺陷修复
 
 * 修复特殊数据分布场景下，合并时写入内存 Buffer 的编码数据超过 2M，导致合并卡住的问题。
-* 修复并行删除列的场景下，`macro data seq` 命令生成数据重复，导致备份失败的问题。
+* 修复并行删除列的场景下，`macro data seq` 序列号生成数据重复，导致备份失败的问题。
 * 修复存储过程调用系统包中的存储过程时，命中 PL 缓存失败问题。
 * 修复虚拟网卡 IP 超过 16 个的情况下，指定网卡获取 IP 失败，导致 OBServer 节点启动失败问题。
 * 修复 2c4g 小规格 ECS 下，仲裁服务所需资源不足无法启动的问题。系统层面降低了最小资源限制；运维层面需要关注本地 `vm.min_free_kbytes` 的系统配置，避免进程启动后剩余资源低于该值导致进程被操作系统 Kill。
