v410-broken-link-fix-2

--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
@@ -95,10 +95,10 @@ You can connect to an Oracle tenant of OceanBase Database by using any of the fo
 
    For more information about how to connect to OceanBase Database by using SpringJPA, see [Connect to OceanBase Database by using Spring JPA](10.connect-to-the-oceanbase-database-through-springjpa-of-oracle-mode.md).  -->
 
-* Hibernate
+<!-- * Hibernate
 
-   For more information about how to connect to OceanBase Database by using Hibernate, see [Connect to OceanBase Database by using Hibernate](11.connect-to-the-oceanbase-database-through-hibernate-of-oracle-mode.md). 
+   For more information about how to connect to OceanBase Database by using Hibernate, see [Connect to OceanBase Database by using Hibernate](11.connect-to-the-oceanbase-database-through-hibernate-of-oracle-mode.md).  -->
 
-<!-- * MyBatis
+* MyBatis
 
-   For more information about how to connect to OceanBase Database by using MyBatis, see [Connect to OceanBase Database by using MyBatis](12.connect-to-the-oceanbase-database-through-mybatis-of-oracle-mode.md).  -->
+   For more information about how to connect to OceanBase Database by using MyBatis, see [Connect to OceanBase Database by using MyBatis](12.connect-to-the-oceanbase-database-through-mybatis-of-oracle-mode.md). 
