修改 19.INSERT.md

--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/19.INSERT.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/19.INSERT.md
@@ -85,7 +85,7 @@ Outputs & filters:
   
   Outputs & filters:
   -------------------------------------
-    0 - output([column_conv(NUMBER,PS:(38,0),NOT NULL,__values.C1)], [column_conv(VARCHAR2,utf8mb4_bin,length:10,NULL,__values.C2)]), filter(nil),,
+    0 - output([column_conv(NUMBER,PS:(38,0),NOT NULL,__values.C1)], [column_conv(VARCHAR2,utf8mb4_bin,length:10,NULL,__values.C2)]), filter(nil),
         columns([{T1: ({T1: (T1.C1, T1.C2)})}]), partitions(p0)
     1 - output([__values.C1], [__values.C2]), filter(nil)
         values({2, '200'}, {3, '300'})
