--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/5.query-rewrite/2.rule-based-query-rewriting.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/5.query-rewrite/2.rule-based-query-rewriting.md
@@ -415,7 +415,7 @@ obclient> (SELECT c1,c2 FROM t1 LIMIT 5) UNION ALL (SELECT c3,c4 FROM t2 limit 5
   ```sql
   obclient> SELECT DISTINCT 1,2 FROM t1 ;
   <==> 
-  obclient> SELECT DISTINCT 1,2 FROM t1 LIMIT 1;
+  obclient> SELECT 1,2 FROM t1 LIMIT 1;
   
   obclient> CREATE TABLE t1 (c1 INT PRIMARY KEY, c2 INT);
   Query OK, 0 rows affected 
