Add method for uninstalling all-in-one

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -116,7 +116,7 @@
 
 ### 步骤二：配置 OBD
 
-如果是离线部署 OceanBase 集群，可参考 **步骤一** 在中控机上下载并安装 all-in-one 安装包。
+如果是离线部署 OceanBase 集群，可参考 **步骤一** 在中控机上下载并安装 all-in-one 安装包，all-in-one 安装包提供的组件已经经过相互适配测试，为官方推荐版本。
 
 如果对部署所需组件版本有特别要求，可从 [OceanBase 软件下载中心](https://www.oceanbase.com/softwarecenter) 自行下载组件对应版本安装包，复制到中控机任一目录，在该目录下参考以下步骤配置 OBD。
 
@@ -447,6 +447,40 @@ obclient -h10.10.10.4 -P2883 -uroot@sys -p -c -A
 
 * 方法二：通过命令行创建用户租户，详细操作可参考 [创建用户租户](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md)
 
-## 相关文档
+## 相关操作
 
-您可执行 OBD 集群命令对 OBD 部署的集群进行管理，详细命令参见 OBD 文档 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000002049482) 一文。
+### 管理集群
+
+您可执行如下命令对 OBD 部署的集群进行管理，详细命令参见 OBD 文档 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000002049482) 一文。
+
+```shell
+# 查看集群列表
+obd cluster list
+
+# 查看集群状态，以部署名为 obtest 为例
+obd cluster display obtest
+
+# 停止运行中的集群，以部署名为 obtest 为例
+obd cluster stop obtest
+
+# 销毁已部署的集群，以部署名为 obtest 为例
+obd cluster destroy obtest
+```
+
+### 卸载 all-in-one 安装包
+
+您可参考如下步骤卸载 all-in-one 安装包。
+
+1. 卸载安装包
+
+   ```shell
+   [admin@test001 ~]$ cd oceanbase-all-in-one/bin/
+   [admin@test001 bin]$ ./uninstall.sh
+   ```
+
+2. 删除环境变量
+
+   ```shell
+   [admin@test001 bin]$ vim ~/.bash_profile
+   # 删除该文件中的 source /home/admin/.oceanbase-all-in-one/bin/env.sh
+   ```
