--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/3.configure-the-clock-source-optional.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/3.configure-the-clock-source-optional.md
@@ -47,7 +47,7 @@
       在配置文件中添加以下内容：
 
       ```shell
-      server <yout_ntp_server_ip>
+      server <your_ntp_server_ip>
       ```
 
       保存并关闭配置文件。
@@ -102,7 +102,7 @@
       在配置文件中添加以下内容：
 
       ```shell
-      server <yout_ntp_server_ip>
+      server <your_ntp_server_ip>
       ```
 
    5. 运行以下命令，启动 NTP 服务：
