--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -467,9 +467,9 @@ obd cluster stop obtest
 obd cluster destroy obtest
 ```
 
-### 卸载 all-in-one 安装包
+### 卸载 all-in-one
 
-您可参考如下步骤卸载 all-in-one 安装包。
+您可参考如下步骤卸载已安装的 all-in-one。
 
 1. 卸载安装包
 
