--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/1.create-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/1.create-a-dblink-of-oracle-mode.md
@@ -41,7 +41,7 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@tenant IDENTIFIED BY 
   
 * `ip`：指定远端 OceanBase 数据库的 IP 地址。IP 地址可以指定为集群的 OBProxy 的 IP 地址，或者也可以指定为集群中某个 OBServer 服务器的 IP 地址。
 
-  当 IP 地址为指定 OBServer 服务器的 IP 地址时，要求本地数据库与指定 OBServe之间的网络是可以互通的。
+  当 IP 地址为指定 OBServer 服务器的 IP 地址时，要求本地数据库与指定 OBServer 之间的网络是可以互通的。
   
 * `port`：指定远端 OceanBase 数据库的端口号。端口号可以指定为集群的 Proxy 的端口号（默认为 2883），或者也可以指定为集群中某个 OBServer 服务器的 SQL 端口号（默认为 2881）。
 
