--- a/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
+++ b/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
@@ -51,42 +51,23 @@ tar -zxf oblogproxy-ce-for-4x-xxxx.tar.gz -C /usr/local
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>此处的用户名不应包含集群名称或租户名称。</p>
+    <p>此处的用户名不应包含集群名称和租户名称。</p>
   </main>
 
-您获得 OBServer 节点的 sys 租户账号和密码后，需要通过加密配置给 oblogproxy。执行以下命令即可得到账号和密码的密文。
+```shell
+sh run.sh config_sys sys_user sys_pwd
+```
 
-* 假设账号为 user：
+参数说明：
 
-  ```shell
-  logproxy -x user
-  ```
+* `config_sys`：配置文件。
+* `sys_user`：账号。
+* `sys_pwd`：账号密码。
 
-  返回结果如下：
+示例如下：
 
-  ```shell
-  5DA7A17B0A85F9F4D9F2C4EBE7DC****
-  ```
-
-* 假设密码为 pswd：
-
-  ```shell
-  logproxy -x pswd
-  ```
-
-  返回结果如下：
-
-  ```shell
-  5DA7A17B0A85F9F4D9F2C4EBE7DC****
-  ```
-
-把获得的账号和密码的密文分别配置到 `/usr/local/oblogproxy/conf/conf.json` 中的 `ob_sys_username` 和 `ob_sys_password` 字段，例如：
-
-```json
-{
-  "ob_sys_username": "4B9C75F64934174F4E77EE0E9A58****",
-  "ob_sys_password": "DCE2AF09D006D6A440816880B938****"
-}
+```shell
+sh run.sh /usr/local/oblogproxy/conf/conf.json sys passwd
 ```
 
 ### 运行 oblogproxy
