--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -12,7 +12,7 @@
 
 ## 部署 ob-operator
 
-使用 ob-operator 可以简化 OceanBase 在 Kubernetes 中的部署和运维，您可通过以下两种方式部署 ob-operator。
+使用 ob-operator 可以简化 OceanBase 数据库在 Kubernetes 中的部署和运维，您可通过以下两种方式部署 ob-operator。
 
 ### 使用 Helm 部署
 
@@ -53,7 +53,7 @@ kubectl apply -f crd.yaml
 kubectl apply -f operator.yaml
 ```
 
-## 部署 OceanBase 集群
+## 部署 OceanBase 数据库
 
 ### 部署前准备
 
@@ -82,9 +82,9 @@ kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisione
 
 更多信息可以参考 [local-path-provisioner](https://github.com/rancher/local-path-provisioner)。
 
-### 部署 OceanBase 集群
+### 部署 OceanBase 数据库
 
-OceanBase 集群通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改，通过如下命令下载 OceanBase 数据库的配置文件 `obcluster.yaml`。
+OceanBase 数据库集群通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改，通过如下命令下载 OceanBase 数据库的配置文件 `obcluster.yaml`。
 
 ```shell
 wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obcluster.yaml
