--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/75.dba_ob_major_compaction-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/75.dba_ob_major_compaction-of-oracle-mode.md
@@ -13,7 +13,7 @@ DBA_OB_MAJOR_COMPACTION
 
 |           字段名称           |      类型      | 是否可以为 NULL |                                                                                           描述                                                                                            |
 |--------------------------|--------------|------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| FROZEN_SCN           | NUMBER(38)   | NO         | 当前最新的合并版本号                                                                                                                                                                                 |
+| FROZEN_SCN           | NUMBER(38)   | NO         | 最近一次合并的版本号                                                                                                                                                                                 |
 | GLOBAL_BROADCAST_SCN | NUMBER(38)   | NO         | 全局广播的合并版本                                                                                                                                                                               |
 | LAST_SCN             | NUMBER(38)   | NO         | 上一个已经完成合并的版本                                                                                                                                                                            |
 | LAST_FINISH_TIME         | NUMBER(38)   | NO         | 上一次合并结束时间                                                                                                                                                                               |
