--- a/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
+++ b/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
@@ -67,7 +67,7 @@ sh run.sh config_sys sys_user sys_pwd
 示例如下：
 
 ```shell
-sh run.sh /usr/local/oblogproxy/conf/conf.json sys passwd
+sh run.sh config_sys sys passwd
 ```
 
 ### 运行 oblogproxy
