--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -270,7 +270,7 @@
 
       |  配置项  |  是否必选  |  默认值  |  说明     |
       |----------|-----------|----------|----------|
-      | servers  | 必选      | 无        | 每个机器需要用 `- name: 机器标识名 (换行)ip: 机器 ip` 指定，多个机器就指定多次。 |
+      | servers  | 必选      | 无        | 每台机器需要用 `- name: 机器标识名 (换行)ip: 机器 IP` 指定，多个机器就指定多次，机器标识名不能重复。</br> 在机器 IP 不重复的情况下，也可以使用 `- <ip> （换行）- <ip>` 的格式指定，此时 `- <ip>` 的格式相当于 `- name: 机器 IP（换行）ip: 机器 IP`。 |
       | devname  | 可选      | 无        | 和 `servers` 里指定的 IP 对应的网卡，通过 `ip addr` 命令可以查看 IP 和网卡对应关系。 |
       | memory_limit  | 可选      | 0       | observer 进程能从环境中获取的最大内存，未配置的情况下以 `memory_limit_percentage` 配置项为准，配置项详细介绍请参考 [memory_limit](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/136.memory_limit.md) 和 [memory_limit_percentage](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/137.memory_limit_percentage.md)。 |
       | system_memory  | 可选      | 0M        | 保留的系统内存，该参数值会占用 `memory_limit` 的内存，未配置的情况下 OceanBase 数据库会自适应。 |
@@ -309,6 +309,7 @@
 
       |  配置项  |  是否必选  |  默认值  |  说明     |
       |----------|-----------|----------|----------|
+      | servers  | 必选      | 无        | 每台机器需要用 `- name: 机器标识名 (换行)ip: 机器 IP` 指定，多个机器就指定多次，机器标识名不能重复。</br> 在机器 IP 不重复的情况下，也可以使用 `- <ip> （换行）- <ip>` 的格式指定，此时 `- <ip>` 的格式相当于 `- name: 机器 IP（换行）ip: 机器 IP`。 |
       | listen_port  | 必选      | 2883        | ODP 监听端口，默认 2883。 |
       | prometheus_listen_port  | 必选       | 2884        | ODP prometheus 监听端口，默认 2884。 |
       | home_path  | 必选       | 无       | ODP 安装路径，建议在普通用户 admin 下。 |
@@ -355,7 +356,7 @@
 
       |  配置项  |  是否必选  |  默认值  |  说明     |
       |----------|-----------|----------|----------|
-      | servers  | 必选      | 无        | 每个机器需要用 `- name: 机器标识名 (换行)ip: 机器 ip 指定`，多个机器就指定多次。 |
+      | servers  | 必选      | 无        | 每台机器需要用 `- name: 机器标识名 (换行)ip: 机器 IP` 指定，多个机器就指定多次，机器标识名不能重复。</br> 在机器 IP 不重复的情况下，也可以使用 `- <ip> （换行）- <ip>` 的格式指定，此时 `- <ip>` 的格式相当于 `- name: 机器 IP（换行）ip: 机器 IP`。 |
       | home_path  | 必选       | 无       | 组件的安装路径，建议在普通用户 admin 下。 |
       | memory_size  | 必选     | 无      | OCP Express 服务器的内存容量，推荐算法为：memory_size = 512MB +（期望的节点数 * 期望的租户数）* 60MB，期望的租户数需要包含 sys 和 ocp meta 租户本身。 |
       | logging_file_total_size_cap  | 必选       | 1GB        | 日志文件总大小，默认为 1GB。<blockquote>**注意**：</br>该参数的单位需使用 GB 或 MB，若使用 G 或 M 单位会报错，无法成功部署 OCP Express。</blockquote> |
