--- a/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
+++ b/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
@@ -60,9 +60,8 @@ sh run.sh config_sys sys_user sys_pwd
 
 参数说明：
 
-* `config_sys`：配置文件。
-* `sys_user`：账号。
-* `sys_pwd`：账号密码。
+* `sys_user`：用户名。
+* `sys_pwd`：用户密码。
 
 示例如下：
 
