--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/11.backup_backup_dest_option.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/11.backup_backup_dest_option.md
@@ -1,12 +1,10 @@
-backup_backup_dest_option 
+backup_backup_dest_option
 ==============================================
 
 `backup_backup_dest_option` 用于控制备份备份相关的参数。
 
-描述 
+描述
 -----------------------
-
-
 
 |        属性        |  描述   |
 |------------------|-------|
@@ -20,33 +18,19 @@ backup_backup_dest_option
   <p>从 V4.0.0 版本开始弃用。</p>
 </main>
 
-
 `backup_backup_dest_option` 配置项是 `backup_dest_option` 配置项的子集，`backup_backup_dest_option` 配置项不支持指定 `backup_copies` 和 `log_archive_piece_switch_interval` 这两个参数。
 
-示例 
+示例
 -----------------------
 
 ```sql
 obclient> ALTER SYSTEM SET backup_backup_dest_option='log_archive_checkpoint_interval=1h&recovery_window=14d&auto_delete_obsolete_backup=true';
 ```
 
-
-
 其中：
 
 * `log_archive_checkpoint_interval` 参数用于控制非切 Piece 模式下备份备份日志的同步间隔。强烈建议用户采用切 Piece 模式来备份备份日志，不要设置该参数。
 
-  
-
-* `recovery_window` 参数用于控制备份的备份数据可恢复的时间窗口，以及作为判断备份的备份数据是否过期的依据。例如，设置 `recovery_window=7d` 表示从当前时间往过往时间推，7 天内的数据有效，且与这 7 天数据恢复无关的备份的备份数据将被视为过期的数据。`recovery_window` 参数的使用示例及详细说明请参见 [自动清理备份的数据](../../../9.high-data-availability/2.backup-and-restoration-management-1/3.back-up-data-at-the-cluster-level/7.automatically-delete-backed-up-data-1.md)。
-
-  
+* `recovery_window` 参数用于控制备份的备份数据可恢复的时间窗口，以及作为判断备份的备份数据是否过期的依据。例如，设置 `recovery_window=7d` 表示从当前时间往过往时间推，7 天内的数据有效，且与这 7 天数据恢复无关的备份的备份数据将被视为过期的数据。
 
 * `auto_delete_obsolete_backup` 参数用于控制备份的备份数据是否启动自动清理功能。例如，设置 `auto_delete_obsolete_backup=true` 表示系统将会自动清理过期的备份的备份数据。
-
-  
-
-
-
-
-该配置项中各参数的具体使用，请参见 [备份备份前准备](../../../9.high-data-availability/2.backup-and-restoration-management-1/4.back-up-the-backed-up-data/2.command-line-backup-backup-cluster-level/1.backup-preparation.md)。
