--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/12.backup_dest_option.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/12.backup_dest_option.md
@@ -38,7 +38,7 @@ obclient> ALTER SYSTEM SET backup_dest_option='log_archive_checkpoint_interval=2
 
 * `recovery_window` 参数
 
-    `recovery_window` 参数用于控制备份数据可恢复的时间窗口，以及作为判断备份数据是否过期的依据。例如，设置 `recovery_window=7d` 表示从当前时间往前推，7 天内的数据保证可恢复，且与这 7 天数据恢复无关的备份数据将被视为过期的数据。`recovery_window` 参数的使用示例及详细说明请参见 [自动清理备份的数据](../../../9.high-data-availability/2.backup-and-restoration-management-1/3.back-up-data-at-the-cluster-level/7.automatically-delete-backed-up-data-1.md)。
+    `recovery_window` 参数用于控制备份数据可恢复的时间窗口，以及作为判断备份数据是否过期的依据。例如，设置 `recovery_window=7d` 表示从当前时间往前推，7 天内的数据保证可恢复，且与这 7 天数据恢复无关的备份数据将被视为过期的数据。
 
     如果不通过配置项 `backup_dest_option` 设置，则默认使用集群级别的配置项 `backup_recovery_window` 的值。如果配置项 `backup_dest_option` 和 `backup_recovery_window` 均未设置，则使用默认值 `0`，表示备份数据不过期。如果配置项 `backup_dest_option` 和 `backup_recovery_window` 均已设置，则以 `backup_dest_option` 配置的值为准。建议使用配置项 `backup_dest_option` 来设置。
 
@@ -63,5 +63,3 @@ obclient> ALTER SYSTEM SET backup_dest_option='log_archive_checkpoint_interval=2
     `backup_copies` 参数用于指定一个备份级的冗余度。默认值为 `0`。如果设置了 `backup_backup_dest`，建议该参数设置为 `2`，其有效范围为 \[0,8]。
 
     如果 `backup_copies` 设置为小于 `2`，则在清理备份时，系统不会考虑备份备份是否已成功；如果 `backup_copies` 设置为 `2`，则仅当成功备份备份数据到 `backup_backup_dest` 后才会自动清理 `backup_dest` 下的备份。如果未设置备份备份，建议此参数使用默认值。
-
-更多该配置项中各参数的使用，请参见 [备份前准备](../../../9.high-data-availability/2.backup-and-restoration-management-1/3.back-up-data-at-the-cluster-level/1.backup-by-using-the-command-line-1/1.preparation-before-backup.md)。
