--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/158.tablet_meta_table_scan_batch_count.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/158.tablet_meta_table_scan_batch_count.md
@@ -1,4 +1,4 @@
-tablet_meta_table_scan_batch_count 
+## tablet_meta_table_scan_batch_count 
 
 
 tablet_meta_table_scan_batch_count 用于设置 Tablet meta table 迭代器使用过程中在内存里缓存的 Tablet 数量。
