--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/19.backup_region.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/19.backup_region.md
@@ -1,8 +1,7 @@
-backup_region 
+backup_region
 ==================================
 
 `backup_region` 用于用户指定执行备份的 Region。
-
 
 |      **属性**      | **描述** |
 |------------------|--------|
@@ -16,7 +15,9 @@ backup_region
   <p>从 V4.0.0 版本开始弃用。</p>
 </main>
 
-
 该配置项可用于控制数据备份的 Region。配置后，系统仅执行指定 Region 的调度备份任务；如果不配置，则默认会执行所有 Region 的调度备份任务。
-> **注意**<br>
-> 不允许同时配置 `backup_zone` 和 `backup_region`，二者只能配置一个，推荐使用 `backup_zone`，`backup_zone` 的设置场景示例请参见 [设置 backup_zone](../../../9.high-data-availability/2.backup-and-restoration-management-1/7.routine-maintenance-1/3.set-backup_zone-1.md)。
+
+<main id="notice" type='notice'>
+  <h4>注意</h4>
+  <p>不允许同时配置<code>backup_zone</code> 和 <code>backup_region</code>，二者只能选其一，推荐配置 <code>backup_zone</code>。</p>
+</main>
